--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ghcr.io/bilalalpaslan/gdsc-chatbot
+      run: docker build . --file dockerfile --tag ghcr.io/bilalalpaslan/gdsc-chatbot
     
     - name: Push image registery
       run: docker push ghcr.io/bilalalpaslan/gdsc-chatbot
