--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,13 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file dockerfile --tag ghcr.io/bilalalpaslan/gdsc-chatbot
-    
-    - name: Push image registery
+
+    - name: Login to the Ghcr.io
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ secrets.actor }}
+        password: ${{ secrets.GHCR_TOKEN }}
+
+    - name: Push the Ghcr.io
       run: docker push ghcr.io/bilalalpaslan/gdsc-chatbot
